--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,11 @@
                 <version>${version.springBoot}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-websocket</artifactId>
+                <version>${version.springBoot}</version>
+            </dependency>
+            <dependency>
                 <groupId>ru.yandex.qatools.embed</groupId>
                 <artifactId>postgresql-embedded</artifactId>
                 <version>2.9</version>
