--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -155,4 +155,37 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>docker</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>dockerfile-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>build-image</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>build</goal>
+                                    <goal>tag</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <repository>${docker.image}</repository>
+                            <tag>${project.version}</tag>
+                            <buildArgs>
+                                <WAR_FILE>target/${project.build.finalName}.war</WAR_FILE>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <properties>
+                <docker.image>spacemud/web</docker.image>
+            </properties>
+        </profile>
+    </profiles>
 </project>
