--- a/webapp/package.json
+++ b/webapp/package.json
@@ -43,7 +43,8 @@
     "flow-bin": "^0.68.0",
     "jest-enzyme": "^6.0.0",
     "mkdirp": "^0.5.1",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "storybook-addon-jsx": "^5.3.0"
   },
   "resolutions": {
     "immer": "^1.2.0"
