Support for BCrypt hashing of passwords

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -66,6 +66,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <scope>compile</scope>
