--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
                 <version>${version.junitJupiter}</version>
             </dependency>
             <dependency>
+                <groupId>org.mindrot</groupId>
+                <artifactId>jbcrypt</artifactId>
+                <version>0.4</version>
+            </dependency>
+            <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>42.2.2.jre7</version>
