Introduced React Router Redux for page routing

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "history": "^4.7.2",
     "i18next": "^10.3.0",
     "i18next-browser-languagedetector": "^2.1.0",
     "immutable": "^3.8.2",
@@ -14,6 +15,7 @@
     "react-i18next": "^7.3.6",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
     "redux-box": "^1.4.5",
     "semantic-ui-react": "^0.79.0",
